--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -10,6 +10,9 @@
             align-items: flex-end;
         }
     }
+    @media (max-width: 650px){
+        width: 95%;
+    }
 }
 
 
@@ -87,12 +90,20 @@
     justify-content: center;
     padding-top: 1rem;
 
+    @media (max-width: 650px){
+        width: auto;
+    }   
+
     &__logo-container { /* .search-bar__logo-container */
         position: absolute;
         top: 3rem; left: 0;
         @media (max-width: 768px){
             position: relative;
             top: 0; left: 0;
+        }
+        @media (max-width: 768px){
+            position: relative;
+            top: 1.2rem; left: 1.3rem;
         }
         
     }
@@ -103,27 +114,40 @@
             width: 100%;
 
         }
+        @media (max-width: 650px){
+            width: 90%;
+        }
     }
 
     &__form-container {
     //    padding-bottom: 0.5rem;
-       padding-top: 2rem;
-       padding-right: 1.5rem;
+    //    background-color: gold;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 2rem;
+    padding-right: 1.5rem;
+    width: 38rem;
 
-       width: 38rem;
+       
+       @media (max-width: 768px){
+        justify-content: flex-start;
+        width: 27rem;
+        padding-right: 0;
+       }
+
+
+       @media (max-width: 650px){
+        // padding-left: 1rem;
+    }
        
       
 
-    //    background-color: gold;
-       display: flex;
-       justify-content: space-between;
-       @media (max-width: 768px){
-        justify-content: flex-start;
-       }
     }
 
     &__form-label {
-        // background-color: greenyellow;
+        @media (max-width: 768px){
+            display: none;
+        }
         
     }
 
@@ -134,6 +158,10 @@
         // border-right: 2rem solid transparent;
         @media (max-width: 768px){
             width: 45%;
+        }
+        @media (max-width: 650px){
+            width: 55%;
+            margin-left: 1rem;
         }
        
     
@@ -162,6 +190,11 @@
         @media (max-width: 768px){
             position: relative;
             right: 2rem;
+        }
+        @media (max-width: 650px){
+            padding-right: 0;
+            padding-left: 0;
+            right: 1rem;
         }
         
         i{ 
@@ -193,9 +226,10 @@
             justify-content: space-evenly;
            
             @media (max-width: 768px){
-                display: block;
+                // display: block;
                 right: -5rem;
             }
+           
         }
         i:hover .nav-car{
             font-size: 1rem;
@@ -257,7 +291,7 @@
         display: block;
         background-color: var(--letras-body);
         height: 70%;
-        border-radius: 10px;
+        border-radius: 8px;
     }
 
     &__top-bread,
