--- a/src/pages/Contacto.scss
+++ b/src/pages/Contacto.scss
@@ -12,6 +12,10 @@
         border-radius: 8px;
         text-align: center;
         box-shadow: 0px 0px 2px 1px  var(--azul-black);
+        
+        @media (max-width: 650px){
+            padding: .5rem .5rem;
+        }
 
     }
     &__phone{
@@ -55,6 +59,7 @@ hr{
     &__control{
         display: block;
         color: var(--azul-oscuro);
+        
     }
     &__enviar{
        display: block;
@@ -83,6 +88,10 @@ hr{
         display: flex;
         width: 40rem;
         justify-content: center;
+
+        @media (max-width: 650px){
+            width: auto;
+        }
     }
 }
 
