--- a/src/components/Tabla.scss
+++ b/src/components/Tabla.scss
@@ -7,28 +7,42 @@ table.tabla-alta {
 
     th, td {
         border: 1px solid #ddd;
-        padding: 8px;
+        padding: .6rem;
         text-align: left;
-        border-radius: 0px;
         text-align: center;
         display: table-cell;
-        @media (max-width: 650px){
+        @media (max-width: 400px){
           width: 4.5rem;
-      }
+        }
+        
     }
     @media (max-width: 650px){
       width: 95%;
-  }
+    }
+
+    @media (max-width: 400px){
+      margin: 2rem 0;
+    }
 }
 #elim-comprar{
   display: flex;
   justify-content: space-around;
+
+    @media (max-width: 400px){
+       flex-direction: column;
+    }
 }
 #elim-comprar button{
   width: 7rem;
     @media (max-width: 650px){
     width: 5.5rem;
     }
+
+    @media (max-width: 400px){
+      width: 4.5rem;
+      font-size: .8rem;
+    }
+
 }
 #no_mostar{
   @media (max-width: 768px){
