--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -92,6 +92,7 @@
 
     @media (max-width: 650px){
         width: auto;
+        margin-top: 5.5rem;
     }   
 
     &__logo-container { /* .search-bar__logo-container */
@@ -101,9 +102,12 @@
             position: relative;
             top: 0; left: 0;
         }
-        @media (max-width: 768px){
-            position: relative;
-            top: 1.2rem; left: 1.3rem;
+        @media (max-width: 650px){
+            position: absolute;
+            // left: (400px/2);
+            top: 1rem;
+            left: 2.5rem;
+            // justify-content: center;
         }
         
     }
@@ -130,14 +134,15 @@
 
        
        @media (max-width: 768px){
-        justify-content: flex-start;
+        justify-content: center;
         width: 27rem;
         padding-right: 0;
        }
 
 
-       @media (max-width: 650px){
-        // padding-left: 1rem;
+       @media (max-width: 400px){
+        width: 21rem;
+       
     }
        
       
@@ -146,7 +151,7 @@
 
     &__form-label {
         @media (max-width: 768px){
-            display: none;
+            // display: none;
         }
         
     }
@@ -160,8 +165,8 @@
             width: 45%;
         }
         @media (max-width: 650px){
-            width: 55%;
-            margin-left: 1rem;
+            width: 30%;
+            margin-left: 0;
         }
        
     
@@ -270,6 +275,10 @@
     
     @media (max-width: 768px){
         left: 4.2rem;
+    }
+    @media (max-width: 400px){
+    left: 3.1rem;
+       
     }
  }
 
