--- a/src/pages/FormatoPag.scss
+++ b/src/pages/FormatoPag.scss
@@ -7,9 +7,9 @@
         @media (max-width: 768px){
             display: flex;
             flex-direction: column;
-            padding-top: 2rem;
-            align-items: center;
+            padding-top: 1rem;
             gap: 1.5rem;
+            text-align: center;
         }
      
     &__photo{
@@ -18,6 +18,9 @@
         max-height: 26rem;
         box-shadow: 1px 1px 5px 3px var(--sombra-caja);
 
+        @media (max-width: 400px){
+            width: 90%;
+        }
     }
 }
 
@@ -39,6 +42,9 @@
         flex-direction: column;
         width: 28rem;
 
+        @media (max-width: 400px){
+            width: auto;
+        }
     }
     &__garantias{
         display: flex;
@@ -49,6 +55,9 @@
 
             @media (max-width: 768px){
                 align-items: flex-start;
+            }
+            @media (max-width: 400px){
+                width: auto;
             }
 
     }
@@ -76,7 +85,7 @@
 
 }
 .devl{
-    padding-top: 3rem;
+    padding:2rem 2rem 0 2rem;
 }
 .modelo{
     text-align: center;
@@ -113,6 +122,7 @@
 
             @media (max-width: 768px){
                 padding: 1rem;
+                margin: 1rem;
             }
         }
 
@@ -122,9 +132,7 @@
     position: absolute;
     background-color: #FFFF;
     transition: 0.5s;
-        @media (max-width: 768px){
-            background-color: transparent;
-        }
+        
 
 }
 .end__bottom span:nth-child(1){
@@ -132,24 +140,40 @@
         height: 3px;
         top: 0;
         left: -100%;
+
+        @media (max-width: 400px){
+            width: 0;
+        }
 }
 .end__bottom span:nth-child(2){
         width: 100%;
         height: 3px;
         bottom: 0;
         right: -100%;
+
+        @media (max-width: 400px){
+            width: 0;
+        }
 }
 .end__bottom span:nth-child(3){
         width: 3px;
         height: 100%;
         bottom: -100%;
         left: 0;
+
+        @media (max-width: 400px){
+            width: 0;
+        }
 }
 .end__bottom span:nth-child(4){
         width: 3px;
         height: 100%;
         top: -100%;
         right: 0;
+
+        @media (max-width: 400px){
+            width: 0;
+        }
 }
     
 .end__bottom:hover span:nth-child(1){
